# CSD2

./: README.md
csd2b/Oscillators/: CMakeLists.txt  customCallback.h  main.cpp  oscillator.cpp  oscillator.h  oscillatorBank.h  saw.cpp  sine.cpp  sine.h  square.cpp  square.h
csd2b/synth/: CMakeLists.txt  customCallback.h  envelope.cpp  envelope.h  filter.cpp  filter.h  fmSynth.cpp  fmSynth.h  main.cpp  melody.cpp  melody.h  note.cpp  note.h  oscillator.cpp  oscillator.h  saw.cpp  saw.h  sine.cpp  sine.h  square.cpp  subSynth.cpp  subSynth.h  subUI.cpp  subUI.h  synth.cpp  synth.h  todo.txt
