cmake_minimum_required(VERSION 3.22)
project(synthesizer VERSION 0.0.1)

juce_add_console_app(synthesizer PRODUCT_NAME "synthesizer")
target_sources(synthesizer PRIVATE 
main.cpp 
sine.cpp
square.cpp
saw.cpp
oscillator.cpp
filter.cpp
synth.cpp
subSynth.cpp
fmSynth.cpp
envelope.cpp
)

target_compile_definitions(synthesizer PRIVATE JUCE_WEB_BROWSER=0 JUCE_USE_CURL=0)

target_link_libraries(synthesizer
        PRIVATE
        juce::juce_audio_basics
        juce::juce_audio_devices
        juce::juce_audio_formats
        juce::juce_audio_processors

        PUBLIC
        juce::juce_recommended_config_flags
        juce::juce_recommended_warning_flags
)

target_compile_features(synthesizer PRIVATE cxx_std_20)
